--- a/saramin_project/saramin_project.ipynb
+++ b/saramin_project/saramin_project.ipynb
@@ -4293,7 +4293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a2ee47db",
    "metadata": {},
    "outputs": [
@@ -4320,7 +4320,8 @@
       "url 9 has been created. getting data...\n",
       "page 9 has been scraped\n",
       "url 10 has been created. getting data...\n",
-      "page 10 has been scraped\n"
+      "page 10 has been scraped\n",
+      "task compelete!\n"
      ]
     }
    ],
@@ -4551,7 +4552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "93840d9d",
    "metadata": {},
    "outputs": [
@@ -4628,7 +4629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "0c2b2096",
    "metadata": {},
    "outputs": [
@@ -4911,6 +4912,16 @@
    "source": [
     "\n",
     "new_data.tail(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a0211db2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data.to_csv('ML_positions_scrapted_data.csv', index=False)"
    ]
   },
   {
